# content-studio

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  clipboard.rs  ideas.rs  mod.rs  tags.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai.rs  database.rs  mod.rs
src/components/ai/: AIPanel.tsx  AISettings.tsx  index.ts
src/components/editor/: EditorToolbar.tsx  RichTextEditor.tsx
src/components/ideas/: IdeaCard.tsx  IdeaForm.tsx  IdeaList.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/publisher/: PublishPanel.tsx  index.ts
src/stores/: aiStore.ts  editorStore.ts  ideaStore.ts  settingsStore.ts  tagStore.ts
src/types/: index.ts
src/utils/: cn.ts
