[package]
name = "content-studio"
version = "0.1.0"
description = "Content Studio - AI-powered content creation tool"
authors = ["Content Studio Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "content_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for AI APIs
reqwest = { version = "0.11", features = ["json", "stream"] }

# Clipboard
arboard = "3.2"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"
